--- a/CodeGenUtility/src/main/resources/static/html/successpopup.html
+++ b/CodeGenUtility/src/main/resources/static/html/successpopup.html
@@ -7,7 +7,7 @@ Do you want to check the Job status?
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary myButton" style="width: 50px;" type="button"
-ng-click="close()">Yes</button>
+ng-click="navigateToJobStatusPage()">Yes</button>
 <button class="btn btn-primary myButton" style="width: 50px;" type="button"
 ng-click="close()">No</button>
 </div>
