--- a/CodeGenUtility/src/main/resources/static/html/job.html
+++ b/CodeGenUtility/src/main/resources/static/html/job.html
@@ -4,6 +4,13 @@
 <div class="modal-body">
 	<div class="container-fluid">
 		<div class="innerModal">
+			<div class="row titleDiv">
+				<div class="col-md-12 titleDesc">
+					SOURCE
+					<div style="padding-bottom: 17px"></div>
+					<div class="stroke"></div>
+				</div>
+			</div>
 			<div class="row">
 				<div class="col-md-3">
 					<label class="labelSubHeader">REQUEST ID</label> 
@@ -32,15 +39,69 @@
 					<input type="text" class="customTextBox" ng-model="job.source" readonly="readonly"  title="{{job.source}}">
 				</div>
 				<div class="col-md-3">
-					<label class="labelSubHeader">SOURCE TABLE</label> 
-					<input type="text" class="customTextBox" ng-model="job.sourceTableName" readonly="readonly"  title="{{job.sourceTableName}}">
+					<label ng-show="job.sourceType !='RDBMS'" class="labelSubHeader">FILE NAME</label> 
+					<label ng-show="job.sourceType =='RDBMS'" class="labelSubHeader">SOURCE TABLE</label> 
+					<input type="text" class="customTextBox" ng-model="job.sourceTableName" readonly="readonly" title="{{job.sourceTableName}}">
 				</div>
+				<div class="col-md-3">
+					<label class="labelSubHeader">SOURCE COLUMNS</label> 
+					<input type="text" class="customTextBox" ng-model="job.sourceColumnName" readonly="readonly"  title="{{job.sourceColumnName}}">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3">
+					<label class="labelSubHeader">UNIQUE KEY</label> 
+					<input type="text" class="customTextBox" ng-model="job.joinKey" readonly="readonly"  title="{{job.joinKey}}">
+				</div>
+				<div class="col-md-3">
+					<label class="labelSubHeader">CALCULATE DELTA ON</label> 
+					<input type="text" class="customTextBox" ng-model="job.calculateDeltaOn" readonly="readonly"  title="{{job.calculateDeltaOn}}">
+				</div>
+				<div class="col-md-3">
+					<label class="labelSubHeader">WHERE CONDITION</label> 
+					<input type="text" class="customTextBox" ng-model="job.whereCondition" readonly="readonly"  title="{{job.whereCondition}}">
+				</div>
+				<div class="col-md-3">
+					<label class="labelSubHeader">ARCHIVE PERIOD (DAYS)</label> 
+					<input type="text" class="customTextBox" ng-model="job.archivePeriod" readonly="readonly"  title="{{job.archivePeriod}}">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3">
+					<label class="labelSubHeader">SOURCE DIRECTORY</label> 
+					<input type="text" class="customTextBox" ng-model="job.sourceDirectory" readonly="readonly"  title="{{job.sourceDirectory}}">
+				</div>
+				<div class="col-md-3">
+					<label class="labelSubHeader">SOURCE FILE SCHEMA PATH</label> 
+					<input type="text" class="customTextBox" ng-model="job.fillerThree" readonly="readonly"  title="{{job.fillerThree}}">
+				</div>
+				<div class="col-md-3">
+					<label class="labelSubHeader">FILE DELIMITER</label> 
+					<input type="text" class="customTextBox" ng-model="job.fillerOne" readonly="readonly"  title="{{job.fillerOne}}">
+				</div>
+				<div class="col-md-3">
+					<label class="labelSubHeader">ROW TAG</label> 
+					<input type="text" class="customTextBox" ng-model="job.fillerTwo" readonly="readonly"  title="{{job.fillerTwo}}">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3">
+					<label class="labelSubHeader">SUBMITTED ON</label> 
+					<input type="text" class="customTextBox" ng-model="job.updateTimeStamp" readonly="readonly"  title="{{job.updateTimeStamp}}">
+				</div>
+			</div>
+			<div class="row titleDiv" style="margin-top: 3%;">
+				<div class="col-md-12 titleDesc">
+					TARGET
+					<div style="padding-bottom: 17px"></div>
+					<div class="stroke"></div>
+				</div>
+			</div>
+			<div class="row">
 				<div class="col-md-3">
 					<label class="labelSubHeader">LOAD TYPE</label> 
 					<input type="text" class="customTextBox" ng-model="job.loadType" readonly="readonly"  title="{{job.loadType}}">
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-md-3">
 					<label class="labelSubHeader">TARGET SERVER</label> 
 					<input type="text" class="customTextBox" ng-model="job.targetConnection" readonly="readonly"  title="{{job.targetConnection}}">
@@ -53,59 +114,15 @@
 					<label class="labelSubHeader">HIVE TABLE</label> 
 					<input type="text" class="customTextBox" ng-model="job.targetTableName" readonly="readonly"  title="{{job.targetTableName}}">
 				</div>
+			</div>
+			<div class="row">
 				<div class="col-md-3">
 					<label class="labelSubHeader">HIVE TABLE TYPE</label> 
 					<input type="text" class="customTextBox" ng-model="job.targetTableType" readonly="readonly"  title="{{job.targetTableType}}">
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-md-3">
 					<label class="labelSubHeader">HIVE PARTITION KEY</label> 
 					<input type="text" class="customTextBox" ng-model="job.targetPartitionKey" readonly="readonly"  title="{{job.targetPartitionKey}}">
-				</div>
-				<div class="col-md-3">
-					<label class="labelSubHeader">SUBMITTED ON</label> 
-					<input type="text" class="customTextBox" ng-model="job.updateTimeStamp" readonly="readonly"  title="{{job.updateTimeStamp}}">
-				</div>
-				<div class="col-md-3">
-					<label class="labelSubHeader">SOURCE COLUMNS</label> 
-					<input type="text" class="customTextBox" ng-model="job.sourceColumnName" readonly="readonly"  title="{{job.sourceColumnName}}">
-				</div>
-				<div class="col-md-3">
-					<label class="labelSubHeader">CALCULATE DELTA ON</label> 
-					<input type="text" class="customTextBox" ng-model="job.calculateDeltaOn" readonly="readonly"  title="{{job.calculateDeltaOn}}">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3">
-					<label class="labelSubHeader">UNIQUE KEY</label> 
-					<input type="text" class="customTextBox" ng-model="job.joinKey" readonly="readonly"  title="{{job.joinKey}}">
-				</div>
-				<div class="col-md-3">
-					<label class="labelSubHeader">WHERE CONDITION</label> 
-					<input type="text" class="customTextBox" ng-model="job.whereCondition" readonly="readonly"  title="{{job.whereCondition}}">
-				</div>
-				<div class="col-md-3">
-					<label class="labelSubHeader">SOURCE DIRECTORY</label> 
-					<input type="text" class="customTextBox" ng-model="job.sourceDirectory" readonly="readonly"  title="{{job.sourceDirectory}}">
-				</div>
-				<div class="col-md-3">
-					<label class="labelSubHeader">SOURCE FILE SCHEMA PATH</label> 
-					<input type="text" class="customTextBox" ng-model="job.fillerThree" readonly="readonly"  title="{{job.fillerThree}}">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3">
-					<label class="labelSubHeader">ARCHIVE PERIOD (DAYS)</label> 
-					<input type="text" class="customTextBox" ng-model="job.archivePeriod" readonly="readonly"  title="{{job.archivePeriod}}">
-				</div>
-				<div class="col-md-3">
-					<label class="labelSubHeader">FILE DELIMITER</label> 
-					<input type="text" class="customTextBox" ng-model="job.fillerOne" readonly="readonly"  title="{{job.fillerOne}}">
-				</div>
-				<div class="col-md-3">
-					<label class="labelSubHeader">ROW TAG</label> 
-					<input type="text" class="customTextBox" ng-model="job.fillerTwo" readonly="readonly"  title="{{job.fillerTwo}}">
 				</div>
 			</div>
 		</div>
