Defect Fixes and Enhancements

--- a/CodeGenUtility/src/main/resources/static/html/job.html
+++ b/CodeGenUtility/src/main/resources/static/html/job.html
@@ -129,5 +129,5 @@
 	</div>
 </div>
 <div class="modal-footer">
-    <button class="btn myPopups" type="button"ng-click="close()">OK</button>
+    <button class="btn myPopups myButton" type="button"ng-click="close()">OK</button>
 </div>
