--- a/CodeGenUtility/src/main/resources/static/html/jobstatus.html
+++ b/CodeGenUtility/src/main/resources/static/html/jobstatus.html
@@ -93,7 +93,7 @@
 					<!-- <td>{{job.targetTableName}}</td> -->
 					<td>{{job.loadType}}</td>
 					<td>{{job.createTimeStamp}}</td>
-					<td><a ng-click="clickOpenPopUp(job)"><span class="glyphicon glyphicon-eye-open" style="padding-left: 33%;"></span></a></td>
+					<td><a ng-click="clickOpenPopUp(job)"><span class="glyphicon glyphicon-eye-open" style="padding-left: 33%;cursor:pointer;"></span></a></td>
 				</tr>
 			</tbody>
 		</table>
