--- a/CodeGenUtility/src/main/resources/static/index.html
+++ b/CodeGenUtility/src/main/resources/static/index.html
@@ -51,7 +51,7 @@
                            </a>
                     </li>
                     <li ng-class="isNotJobPage?'activeNavbar':''">
-                           <a href="/" class="btn-lg" ng-click="callHome()">
+                           <a href="#/" class="btn-lg" ng-click="callHome()">
                         <span class="glyphicon glyphicon-dashboard codegenIcons"></span>
                       </a>
                     </li>
@@ -104,7 +104,7 @@
 						<div class="col-md-4">
 							<input class="btnRadio" type="radio" ng-model="homeRadioBtn" ng-change="redirectToPage(homeRadioBtn)"
 								value="Files"> <label class="sourcelocationLabel">
-								Files</label>
+								File Server</label>
 						</div>
 					</div>
 				</div>
