--- a/CodeGenUtility/src/main/resources/static/html/requestFormRDBMS.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestFormRDBMS.html
@@ -208,10 +208,13 @@
 								<label ng-class="class">ARCHIVE PERIOD (DAYS)</label> 
 								<input	type="text" name="archivePeriod"
 									 ng-class="classtextbox"
-									id="archivePeriod" ng-pattern-restrict="^[0-9]*$" ng-disabled="whereDisabled"
+									id="archivePeriod" maxlength="3" ng-pattern-restrict="[1-9][0-9]{0,2}$" ng-blur="checkarchivePeriod(codeGenRequest.archivePeriod)" ng-disabled="whereDisabled"
 									placeholder="Please Enter"
 									ng-model="codeGenRequest.archivePeriod">
-								
+								<div ng-show="showArchiveValidation">
+									<div style="line-height: 3px">&nbsp;</div>
+									<span class="errmsg">Archive Period should be in between 1 to 365</span>
+								</div>
 							</div>
 						</div>
 
