Job page - Source File Schema Path Renamed to File Schema Path

--- a/CodeGenUtility/src/main/resources/static/html/job.html
+++ b/CodeGenUtility/src/main/resources/static/html/job.html
@@ -72,7 +72,7 @@
 					<input type="text" class="customTextBox" ng-model="job.sourceDirectory" readonly="readonly"  title="{{job.sourceDirectory}}">
 				</div>
 				<div class="col-md-3">
-					<label class="labelSubHeader">SOURCE FILE SCHEMA PATH</label> 
+					<label class="labelSubHeader">FILE SCHEMA PATH</label> 
 					<input type="text" class="customTextBox" ng-model="job.fillerThree" readonly="readonly"  title="{{job.fillerThree}}">
 				</div>
 				<div class="col-md-3">
