Defects And Enhancements

--- a/CodeGenUtility/src/main/resources/static/html/requestForm.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestForm.html
@@ -80,7 +80,7 @@
 								style="padding-top: 0">FILE
 								DELIMITER <span
 								class="pull-right glyphicon glyphicon-info-sign rightHoverHelp"
-								data-toggle="tooltip" title="comma(,) , Semicolon(;), Pipe(|)"></span>
+								data-toggle="tooltip" title="Please enter the Delimiter like '|',';' etc."></span>
 							</label> <input type="text" id="filedel"
 								ng-class="fileDelimeter ? 'disabledTextBox' : 'customTextBox' "
 								name="filedel" ng-required="fileDelimeterRequired" maxlength="1"
